k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslo-api
  namespace: teslo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teslo-api
  template:
    metadata:
      labels:
        app: teslo-api
    spec:
      containers:
        - name: teslo-api
          image: ghcr.io/dmarmijosa/teslo-api:latest
          ports:
            - containerPort: 3000
