k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslo-api
  namespace: teslo
spec:
  selector:
    app: teslo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
